Nueva Versión Actualizada

--- a/BacCredomatic.html
+++ b/BacCredomatic.html
@@ -110,7 +110,49 @@
             </div>
         </div>
         <div class="solutions">
+            <div class="solutionsText">
+                <h2>Te brindamos las mejores <br>
+                soluciones</h2>
+            </div>
+            <div class="solutionsUnderText">
+                <p>Descubrí las opciones que tenemos para vos</p>
+            </div>
+            <div class="solutionsButtons">
+                <div class="solutionsButtons">
+                    <!-- Imagen principal-->
+                    <img id="imagen-principal" src="https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_tarjetas_vertical_sinfondo.png.webp?itok=tqfIBROJ" class="buttonHoverImage" alt="Imagen principal">
 
+                    <!-- Botón 1 -->
+                    <button class="solutionsButton"
+                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_tarjetas_vertical_sinfondo.png.webp?itok=tqfIBROJ')"
+                            onmouseout="volverImagen()">Solicitá tu tarjeta aquí</button>
+
+                    <!-- Botón 2 -->
+                    <button class="solutionsButton"
+                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_tarjetas_vertical_sinfondo.png.webp?itok=tqfIBROJ')"
+                            onmouseout="volverImagen()">Renová tu tarjeta</button>
+
+                    <!-- Botón 3 -->
+                    <button class="solutionsButton"
+                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_prestamos_vertical_sinfondo.png.webp?itok=jTlyG1Q1')"
+                            onmouseout="volverImagen()">Conseguí tu préstamo</button>
+
+                    <!-- Botón 4 -->
+                    <button class="solutionsButton"
+                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2023-05/SWC-755-Compass.png.webp?itok=ay1xJiJW')"
+                            onmouseout="volverImagen()">Compass</button>
+
+                    <!-- Botón 5 -->
+                    <button class="solutionsButton"
+                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_sucursales_vertical_sinfondo.png.webp?itok=xRm40Set')"
+                            onmouseout="volverImagen()">¿Cómo podemos ayudarte?</button>
+
+                    <!-- Botón 6 -->
+                    <button class="solutionsButton"
+                            onmouseover="cambiarImagen('https://www.baccredomatic.com/sites/default/files/styles/vertical_image_500x720/public/2021-04/ilustracionesHOME_wizard_seguridad_vertical_sinfondo.png.webp?itok=5UGwnqVF')"
+                            onmouseout="volverImagen()">Consejos de seguridad</button>
+                </div>
+            </div>
         </div>
         <div class="getAppointment">
 
