Nueva Versión Actualizada

--- a/BacCredomatic.html
+++ b/BacCredomatic.html
@@ -155,10 +155,35 @@
             </div>
         </div>
         <div class="getAppointment">
-
+            <div class="getAppointmentText">
+                <h2>Programa tu cita</h2>
+                <h3>Agendá tu espacio y obtené tu ficha</h3>
+            </div>
+            <div class="getAppointmentBoxes">
+                <h2>Servicio de videollamada</h2>
+                <h3>¡Contáctanos desde donde estés!</h3>
+                <p>Ahorrá tiempo y programá tu cita a través <br>
+                de nuestros ejecutivos de forma virtual</p>
+            </div>
+            <div class="getAppointmentBoxes">
+                <h2>Agendá tu visita a la <br>
+                sucursal</h2>
+                <h3>¡Planificá tu visita!</h3>
+                <p>Seleccioná el día y la hora de tu <br>
+                preferencia</p>
+            </div>
+            <div class="getAppointmentBoxes">
+                <h2>Reservá tu ficha para hoy</h2>
+                <h3>¡Adelantará tu turno</h3>
+                <p>Adelantá tu ficha por medio de nuestra <br>
+                ficha virtual</p>
+            </div>
         </div>
         <div class="onlineBank">
-
+            <div class="onlineBankText">
+                <h2>Tu banco digital</h2>
+                <h2>Todo lo que necesitás al alcance de un clic</h2>
+            </div>
         </div>
         <div class="ourPlatforms">
 
