Nueva Versión Actualizada

--- a/BacCredomatic.html
+++ b/BacCredomatic.html
@@ -183,6 +183,7 @@
             <div class="onlineBankText">
                 <h2>Tu banco digital</h2>
                 <h2>Todo lo que necesitás al alcance de un clic</h2>
+                <!--DEBO SEGUIR CON ESTA PARTE-->
             </div>
         </div>
         <div class="ourPlatforms">
