--- a/BacCredomatic.html
+++ b/BacCredomatic.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <head>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="BECStyle.css">
     <title>BEC|Banca online</title>
 </head>
 <body>
@@ -47,6 +48,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="insideContent">
         <div class="variousInfo">
             <div class="creditCardInfo">
                 <table>
@@ -66,7 +69,7 @@
                     <div class="creditCardExtraInfoText">
                         <h2>Tarjeta CashBack</h2>
                         <p>Comprá y ahorrá con los puntos CashBack <br>
-                        de BEC Credomatic</p>
+                            de BEC Credomatic</p>
                     </div>
                 </div>
                 <div class="creditCardExtraInfoImg">
@@ -74,7 +77,7 @@
                     <div class="creditCardExtraInfoText">
                         <h2>La Roja</h2>
                         <p>Disfrutá pagando todas tus compras sin <br>
-                        complicaciones con La Roja</p>
+                            complicaciones con La Roja</p>
                     </div>
                 </div>
                 <div class="creditCardExtraInfoImg">
@@ -82,8 +85,8 @@
                     <div class="creditCardExtraInfoText">
                         <h2>Tarjeta MillasPlus</h2>
                         <p>Acumulá millas y viajá cuando querás, <br>
-                        donde querás y con la aerolínea de tu <br>
-                        preferencia.</p>
+                            donde querás y con la aerolínea de tu <br>
+                            preferencia.</p>
                     </div>
                 </div>
             </div>
@@ -112,7 +115,7 @@
         <div class="solutions">
             <div class="solutionsText">
                 <h2>Te brindamos las mejores <br>
-                soluciones</h2>
+                    soluciones</h2>
             </div>
             <div class="solutionsUnderText">
                 <p>Descubrí las opciones que tenemos para vos</p>
@@ -159,38 +162,75 @@
                 <h2>Programa tu cita</h2>
                 <h3>Agendá tu espacio y obtené tu ficha</h3>
             </div>
-            <div class="getAppointmentBoxes">
+            <div class="getAppointmentBoxes1">
                 <h2>Servicio de videollamada</h2>
                 <h3>¡Contáctanos desde donde estés!</h3>
                 <p>Ahorrá tiempo y programá tu cita a través <br>
-                de nuestros ejecutivos de forma virtual</p>
+                    de nuestros ejecutivos de forma virtual</p>
+                <div class="getAppointmentBoxesImage1">
+                    <img src="https://www.baccredomatic.com/sites/default/files/2021-01/dispositivos-computadora-nube-aplicaciones-BEL.svg" alt="appointmentImage">
+                </div>
             </div>
-            <div class="getAppointmentBoxes">
+            <div class="getAppointmentBoxes2">
                 <h2>Agendá tu visita a la <br>
-                sucursal</h2>
+                    sucursal</h2>
                 <h3>¡Planificá tu visita!</h3>
                 <p>Seleccioná el día y la hora de tu <br>
-                preferencia</p>
+                    preferencia</p>
+                <div class="getAppointmentBoxesImage2">
+                    <img src="https://www.baccredomatic.com/sites/default/files/2021-01/calendario-hora-dia-mes-contacto-agenda.svg" alt="appointmentBoxesImage2">
+                </div>
             </div>
-            <div class="getAppointmentBoxes">
+            <div class="getAppointmentBoxes3">
                 <h2>Reservá tu ficha para hoy</h2>
                 <h3>¡Adelantará tu turno</h3>
                 <p>Adelantá tu ficha por medio de nuestra <br>
-                ficha virtual</p>
+                    ficha virtual</p>
+                <div class="getAppointmentBoxesImage3">
+                    <img src="https://www.baccredomatic.com/sites/default/files/2021-02/sucursal-ventanilla-plataforma-mostrador-asistencia.svg" alt="appointmentBoxesImage3">
+                </div>
             </div>
         </div>
         <div class="onlineBank">
-            <div class="onlineBankText">
+            <div class="onlineBankTextHeader">
                 <h2>Tu banco digital</h2>
                 <h2>Todo lo que necesitás al alcance de un clic</h2>
-                <!--DEBO SEGUIR CON ESTA PARTE-->
+            </div>
+            <div class="onlineBankText">
+                <h2>Donde estés, está BEC</h2>
+                <p>¡Utilizá un método de pago más moderno y simple en tu dia a dia! Completá tus transacciones con <br>
+                    tu dispositivo inteligente de forma segura.</p>
+                <div class="onlineBankImage">
+                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-12/BAC_DondeEste%CC%81sEsta%CC%81BAC_11-2.jpg.webp?itok=yUhkfe57" alt="imagen1">
+                </div>
+            </div>
+            <div class="onlineBankText">
+                <h2>¿Son necesarios tus consumos?</h2>
+                <p>Aprende sobre buenos hábitos financieros, e incorporarlos <br>
+                    en tu dia a dia, te garantizará un estilo de vida más <br>
+                    responsable y saludable.</p>
+                <div class="onlineBankImage">
+                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-12/BAC_Finanzas_Positivas_noviembre_15_2.jpg.webp?itok=5Da6KYRS" alt="imagen2">
+                </div>
+            </div>
+            <div class="onlineBankText">
+                <h2>¡Cuidemos el planeta!</h2>
+                <p>Usá Google Pay para pagar tu próxima salida y así también <br>
+                    aportás y protegés el medio ambiente.</p>
+                <div class="onlineBankImage">
+                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-09/Comprale_tiempo_al_planeta.jpg.webp?itok=09yL_oVg" alt="imagen3">
+                </div>
+            </div>
+            <div class="onlineBankText">
+                <h2>BEC sin límites</h2>
+                <p>Usá Banca Móvil sin limitaciones. Ya tus trámites bancarios no consumen datos móviles</p>
+                <div class="onlineBankImage">
+                    <img src="https://www.baccredomatic.com/sites/default/files/styles/original/public/2024-10/BAC_SinLimites_Octubre.jpg.webp?itok=F6AzvukC" alt="image4">
+                </div>
             </div>
         </div>
-        <div class="ourPlatforms">
-
-        </div>
         <div class="contactUs">
-
+            <img src="BEC.png" alt="footerImage">
         </div>
     </div>
 </div>
