--- a/BacCredomatic.html
+++ b/BacCredomatic.html
@@ -17,7 +17,7 @@
         </div>
         <div class="aboutUs">
             <div class="aboutUsCarousel">
-                <div class="aboutUsCarouselImg">
+                <div class="aboutUsCarouselImages">
                     <img src="https://images.pexels.com/photos/4005082/pexels-photo-4005082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image1">
                     <div class="aboutUsCarouselText">
                         <h1>positivando</h1>
@@ -27,7 +27,7 @@
                         </h4>
                     </div>
                 </div>
-                <div class="aboutUsCarouselImg">
+                <div class="aboutUsCarouselImages">
                     <img src="https://media.istockphoto.com/id/2120760479/photo/young-man-traveling-by-car-getting-out-of-the-car.jpg?s=612x612&w=0&k=20&c=6GmzLsvi9uuYrPJEcv9Dan46TjFWw1Mm7cACTHmWmRg=" alt="Image2">
                     <div class="aboutUsCarouselText">
                         <h1><strong>Tu auto nuevo llega más <br>
@@ -36,7 +36,7 @@
                         <h4>Crédito con aprobación inmediata para comprar el auto que tanto querés</h4>
                     </div>
                 </div>
-                <div class="aboutUsCarouselImg">
+                <div class="aboutUsCarouselImages">
                     <img src="https://photos.peopleimages.com/picture/202310/2945822-happy-people-high-five-and-teamwork-in-logistics-success-or-sale-together-at-retail-store.-excited-man-and-woman-touching-hands-with-smile-for-team-promotion-winning-or-collaboration-at-workshop-zoom_90.jpg" alt="Image3">
                     <div class="aboutUsCarouselText">
                         <h1><strong>Somos <br></strong>
@@ -45,6 +45,26 @@
                         <h4>¿Sos emprendedor o querés emprender? Te ofrecemos soluciones para <br>
                         que llevés tu negocio al éxito, afiliá tu pyme hoy mismo</h4>
                     </div>
+                </div>
+            </div>
+            <div class="progressContainer">
+                <div class="progressWrapper">
+                    <div class="progressBar" data-index="0">
+                        <div class="fill"></div>
+                    </div>
+                    <span class="barText">Positivando</span>
+                </div>
+                <div class="progressWrapper">
+                    <div class="progressBar" data-index="1">
+                        <div class="fill"></div>
+                    </div>
+                    <span class="barText">Nuevo auto</span>
+                </div>
+                <div class="progressWrapper">
+                    <div class="progressBar" data-index="2">
+                        <div class="fill"></div>
+                    </div>
+                    <span class="barText">Bec Socios</span>
                 </div>
             </div>
         </div>
