--- a/BacCredomatic.html
+++ b/BacCredomatic.html
@@ -21,10 +21,10 @@
                     <img src="https://images.pexels.com/photos/4005082/pexels-photo-4005082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image1">
                     <div class="aboutUsCarouselText">
                         <h1>positivando</h1>
-                        <h4>
+                        <p>
                             Es ese sentimiento que te hace disfrutar más de tu día a día, porque BAC <br>
                             te da beneficios, estás bien y todo fluye más fácil
-                        </h4>
+                        </p>
                     </div>
                 </div>
                 <div class="aboutUsCarouselImages">
@@ -33,7 +33,7 @@
                         <h1><strong>Tu auto nuevo llega más <br>
                         rápido de lo que te <br>
                         imaginás</strong></h1>
-                        <h4>Crédito con aprobación inmediata para comprar el auto que tanto querés</h4>
+                        <p>Crédito con aprobación inmediata para comprar el auto que tanto querés</p>
                     </div>
                 </div>
                 <div class="aboutUsCarouselImages">
@@ -42,8 +42,8 @@
                         <h1><strong>Somos <br></strong>
                         más que <br>
                         <strong>tus socios</strong></h1>
-                        <h4>¿Sos emprendedor o querés emprender? Te ofrecemos soluciones para <br>
-                        que llevés tu negocio al éxito, afiliá tu pyme hoy mismo</h4>
+                        <p>¿Sos emprendedor o querés emprender? Te ofrecemos soluciones para <br>
+                        que llevés tu negocio al éxito, afiliá tu pyme hoy mismo</p>
                     </div>
                 </div>
             </div>
