--- a/BacCredomatic.html
+++ b/BacCredomatic.html
@@ -41,8 +41,7 @@
                 <div class="aboutUsCarouselImages">
                     <img src="https://photos.peopleimages.com/picture/202310/2945822-happy-people-high-five-and-teamwork-in-logistics-success-or-sale-together-at-retail-store.-excited-man-and-woman-touching-hands-with-smile-for-team-promotion-winning-or-collaboration-at-workshop-zoom_90.jpg" alt="Image3">
                     <div class="aboutUsCarouselText">
-                        <h1><strong>Somos <br></strong>
-                            más que <br>
+                        <h1><strong>Somos más que <br></strong>
                             <strong>tus socios</strong></h1>
                         <p>¿Sos emprendedor o querés emprender? Te ofrecemos soluciones para <br>
                             que llevés tu negocio al éxito, afiliá tu pyme hoy mismo</p>
