--- a/HTML Files/BacCredomatic.html
+++ b/HTML Files/BacCredomatic.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <meta charset="UTF-8">
 <head>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="BECStyle.css">
+    <script src="../JavaScript%20Files/index.js"></script>
+    <link rel="stylesheet" href="../CSS%20Files/BECStyle.css">
     <title>BEC|Banca online</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="header">
         <div class="index">
             <div class="logo">
-                <img src="BEC.png" alt="logo">
+                <img src="../Images/BEC.png" alt="logo">
             </div>
             <p>Personas</p>
         </div>
@@ -249,7 +249,7 @@
             </div>
         </div>
         <div class="contactUs">
-            <img src="BEC.png" alt="footerImage">
+            <img src="../Images/BEC.png" alt="footerImage">
         </div>
     </div>
 </div>
