--- a/HTML Files/BacCredomatic.html
+++ b/HTML Files/BacCredomatic.html
@@ -82,32 +82,28 @@
                 </table>
             </div>
             <div class="creditCardExtraInfo">
+                <div class="creditCardImages">
+                    <img class="creditCardImg" src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2023-03/Tarjeta%20BIO%20Cashback%20Clasica_0.webp?itok=fs4vQLrn" alt="Image4">
+                    <img class="creditCardImg" src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2021-04/cr-tarjeta-sinmarca-laroja_0.webp?itok=8bK6rx3d" alt="Image5">
+                    <img class="creditCardImg" src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2021-04/cr-tarjeta-sinmarca-millasplus-gold.webp?itok=q4v4HjYj" alt="Image6">
+                </div>
                 <h2>Lo mejor sólo para vos</h2>
-                <div class="creditCardExtraInfoImg">
-                    <img src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2023-03/Tarjeta%20BIO%20Cashback%20Clasica_0.webp?itok=fs4vQLrn" alt="Image4">
                     <div class="creditCardExtraInfoText">
                         <h2>Tarjeta CashBack</h2>
                         <p>Comprá y ahorrá con los puntos CashBack <br>
                             de BEC Credomatic</p>
                     </div>
-                </div>
-                <div class="creditCardExtraInfoImg">
-                    <img src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2021-04/cr-tarjeta-sinmarca-laroja_0.webp?itok=8bK6rx3d" alt="Image5">
                     <div class="creditCardExtraInfoText">
                         <h2>La Roja</h2>
                         <p>Disfrutá pagando todas tus compras sin <br>
                             complicaciones con La Roja</p>
                     </div>
-                </div>
-                <div class="creditCardExtraInfoImg">
-                    <img src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2021-04/cr-tarjeta-sinmarca-millasplus-gold.webp?itok=q4v4HjYj" alt="Image6">
                     <div class="creditCardExtraInfoText">
                         <h2>Tarjeta MillasPlus</h2>
                         <p>Acumulá millas y viajá cuando querás, <br>
                             donde querás y con la aerolínea de tu <br>
                             preferencia.</p>
                     </div>
-                </div>
             </div>
         </div>
         <div class="exchangeInfo">
