Nueva Versión Actualizada

--- a/HTML Files/BacCredomatic.html
+++ b/HTML Files/BacCredomatic.html
@@ -8,14 +8,19 @@
 </head>
 <body>
 <div class="container">
-    <div class="header">
-        <div class="index">
+    <nav class="navbar">
+        <div class="navbarLeft">
             <div class="logo">
                 <img src="../Images/BEC.png" alt="logo">
             </div>
-            <p>Personas</p>
+            <ul class="mainMenu">
+                <li><a href="">Sobre nosotros</a></li>
+                <li><a href="">Préstamos</a></li>
+                <li><a href="">Pymes</a></li>
+                <li><a href="">Private Banking</a></li>
+            </ul>
         </div>
-    </div>
+    </nav>
     <div class="insideContent">
         <div class="aboutUs">
             <div class="aboutUsCarousel">
