--- a/HTML Files/BacCredomatic.html
+++ b/HTML Files/BacCredomatic.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <head>
     <script src="../JavaScript%20Files/index.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS%20Files/BECStyle.css">
     <title>BEC|Banca online</title>
 </head>
@@ -20,6 +21,11 @@
                 <li><a href="">Private Banking</a></li>
             </ul>
         </div>
+        <div class="search-box">
+            <label>
+                <input type="text" placeholder="Buscar">
+            </label>
+        </div>
     </nav>
     <div class="insideContent">
         <div class="aboutUs">
@@ -27,7 +33,7 @@
                 <div class="aboutUsCarouselImages">
                     <img src="https://images.pexels.com/photos/4005082/pexels-photo-4005082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image1">
                     <div class="aboutUsCarouselText">
-                        <h1>positivando</h1>
+                        <h1>Positivando</h1>
                         <p>
                             Es ese sentimiento que te hace disfrutar más de tu día a día, porque BAC <br>
                             te da beneficios, estás bien y todo fluye más fácil
@@ -75,61 +81,46 @@
             </div>
         </div>
         <div class="variousInfo">
-            <div class="creditCardInfo">
-                <table>
-                    <tr class="creditCardInfo">
-                        <td>Tarjetas</td>
-                        <td>Préstamos</td>
-                        <td>Cuentas</td>
-                        <td>Seguros</td>
-                        <td>Fideicomisos</td>
-                    </tr>
-                </table>
-            </div>
             <div class="creditCardExtraInfo">
-                <div class="creditCardImages">
-                    <img class="creditCardImg" src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2023-03/Tarjeta%20BIO%20Cashback%20Clasica_0.webp?itok=fs4vQLrn" alt="Image4">
-                    <img class="creditCardImg" src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2021-04/cr-tarjeta-sinmarca-laroja_0.webp?itok=8bK6rx3d" alt="Image5">
-                    <img class="creditCardImg" src="https://www.baccredomatic.com/sites/default/files/styles/real_estate_768_432_/public/2021-04/cr-tarjeta-sinmarca-millasplus-gold.webp?itok=q4v4HjYj" alt="Image6">
-                </div>
                 <h2>Lo mejor sólo para vos</h2>
-                    <div class="creditCardExtraInfoText">
-                        <h2>Tarjeta CashBack</h2>
-                        <p>Comprá y ahorrá con los puntos CashBack <br>
-                            de BEC Credomatic</p>
-                    </div>
-                    <div class="creditCardExtraInfoText">
-                        <h2>La Roja</h2>
-                        <p>Disfrutá pagando todas tus compras sin <br>
-                            complicaciones con La Roja</p>
-                    </div>
-                    <div class="creditCardExtraInfoText">
-                        <h2>Tarjeta MillasPlus</h2>
-                        <p>Acumulá millas y viajá cuando querás, <br>
-                            donde querás y con la aerolínea de tu <br>
-                            preferencia.</p>
-                    </div>
+                <div class="creditCardBox">
+                    <img src="/Images/Eco BEC.png" alt="La Roja">
+                    <h3>Tarjeta CashBack</h3>
+                    <p>Comprá y ahorrá con los puntos CashBack<br>de BEC Credomatic</p>
+                </div>
+                <div class="creditCardBox">
+                    <img src="/Images/LA VERDE.png" alt="CashBack">
+                    <h3>La Verde</h3>
+                    <p>Disfrutá pagando todas tus compras sin<br>complicaciones con La Verde</p>
+                </div>
+                <div class="creditCardBox">
+                    <img src="/Images/Millas plus.png" alt="MillasPlus">
+                    <h3>Tarjeta MillasPlus</h3>
+                    <p>Acumulá millas y viajá cuando querás,<br>donde querás y con la aerolínea de tu preferencia.</p>
+                </div>
             </div>
         </div>
         <div class="exchangeInfo">
-            <div class="exchangeInfoText">
-                <h2>Tipo de cambio</h2>
-            </div>
-            <div class="exchangeInfoButtons">
-                <button class="exchangeInfoButton" onclick="mostrarDolar()">Dolar</button>
-                <button class="exchangeInfoButton" onclick="mostrarEuro()">Euro</button>
-            </div>
-            <div class="exchangeInfoCurrency">
-                <table class="exchangeInfoCurrencyTable">
-                    <tr class="exchangeInfoCurrencyTypes">
-                        <td>Compra</td>
-                        <td>Venta</td>
-                    </tr>
-                    <tr>
-                        <td id="buyPrice">¢499,00</td>
-                        <td id="sellPrice">¢513,00</td>
-                    </tr>
-                </table>
+            <div class="exchangeInfoFiller">
+                <div class="exchangeInfoText">
+                    <h2>Tipo de cambio</h2>
+                </div>
+                <div class="exchangeInfoButtons">
+                    <button class="exchangeInfoButton" onclick="mostrarDolar()">Dolar</button>
+                    <button class="exchangeInfoButton" onclick="mostrarEuro()">Euro</button>
+                </div>
+                <div class="exchangeInfoCurrency">
+                    <table class="exchangeInfoCurrencyTable">
+                        <tr class="exchangeInfoCurrencyTypes">
+                            <td>Compra</td>
+                            <td>Venta</td>
+                        </tr>
+                        <tr>
+                            <td id="buyPrice">¢499,00</td>
+                            <td id="sellPrice">¢513,00</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
         <div class="solutions">
